Transforming Deque to ArrayList